Refactor : 변수 인라인화, 스태틱 팩토리 메서드 엔티티로 이동